--- a/register.html
+++ b/register.html
@@ -12,6 +12,7 @@
         width: 100vw;
         height: 100vh;
         background-image: url("https://source.unsplash.com/1366x768/?white");
+        flex-shrink: 1;
          
     }
     .main {
@@ -24,6 +25,7 @@
         /* background-color: transparent; */
         
         flex-direction: column;
+        flex-shrink: 1;
     }
     .register{
         display: flex;
